[project]
name = "logos-i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "exa-py>=1.12.1",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.31",
    "mcp[cli]>=1.6.0",
    "pyairtable>=3.1.1",
    "realtime>=2.5.0",
    "slack-sdk>=3.35.0",
    "websockets>=15.0.1",
]
